@@ -60,7 +60,7 @@ CMSimple_XH wiki</a> for further details.</p>
 <li><strong>Backup the data on your server.</strong></li>
 <li>Unzip the distribution on your computer.</li>
 <li>Upload the whole directory uploader/ to your server into the CMSimple_XH plugins directory.</li>
-<li>Set write permissions to the subdirectories config/, css/, languages/ and lib/i18n/.</li>
+<li>Set write permissions to the subdirectories config/, css/, and languages/.</li>
 <li><strong>Switch to Uploader in the back-end to check if all requirements are fulfilled.</strong></li>
 </ol>
 <div class="toplink"><a href="#">back to top</a></div>
